--- a/findly-builder/src/app/scss/bt-styleguide.scss
+++ b/findly-builder/src/app/scss/bt-styleguide.scss
@@ -3131,3 +3131,9 @@ pre{
 /*---- FILE UPLOAD DRAG AND DROP STYLES ENDS HERE---*/
 
 /* -------------------- COMPONENTS STYLES STARTS HERE ---------------------*/
+
+.dropdown-toggle{
+    &::after{
+        display: none;
+    }
+}
