--- a/findly-builder/src/app/components/faq-source/faq-source.component.scss
+++ b/findly-builder/src/app/components/faq-source/faq-source.component.scss
@@ -586,6 +586,31 @@
                             .add {
                                 margin-left: 5px;
                                 width: 24px;
+                                &.elipse-action-dropdown{
+                                    height: 34px;
+                                    width: 34px;
+                                    display: flex;
+                                    align-items: center;
+                                    justify-content: center;
+                                    border-radius: 4px;
+                                    .linked-task-status-control{
+                                        width: 34px;
+                                        text-align: center;
+                                        height: 34px;
+                                        display: flex;
+                                        align-items: center;
+                                        justify-content: center;
+                                        cursor: pointer;
+                                    }
+                                    &:hover{
+                                        background: #fff;
+                                        border: 1px solid #BDC1C6;
+                                    }
+                                    &.show{
+                                        background: #fff;
+                                        border: 1px solid #BDC1C6;
+                                    }
+                                }
                                 .dropdown{
                                     .dropdown-input{
                                         padding: 0;                                        
@@ -593,6 +618,9 @@
                                         border-radius: 4px;
                                         border: 1px solid #BDC1C6;
                                         &::before{
+                                            display: none;
+                                        }
+                                        &::after{
                                             display: none;
                                         }
                                     }
