--- a/findly-builder/src/app/scss/styles.scss
+++ b/findly-builder/src/app/scss/styles.scss
@@ -479,7 +479,7 @@ div.divBlockEmptylastChild:first-child {
     overflow: auto;
     li{
         font-size: 13px;
-        color: #202124 !important;
+        color: #202124;
         padding: 8px 20px;
         cursor: pointer;
         position: relative;
@@ -608,8 +608,35 @@ div.divBlockEmptylastChild:first-child {
     border-radius: 8px;
     padding: 17px 15px;
     border: 0;
-    margin: 0;
-    width: 509px;
+    margin: 11px 0 0 0;
+    width: 471px; 
+    &.ml-58{
+        margin-left: 58px;
+    }
+    &::before{
+        content: "";
+        position: absolute;
+        width: 12px;
+        height: 12px;
+        right: 67px;
+        top: -5px;
+        background: #FFFFFF;
+        transform: rotate(-45deg);
+    }     
+    &.w-274px{
+        width: 274px;
+        &::before{
+            content: "";
+            position: absolute;
+            width: 12px;
+            height: 12px;
+            right: auto;
+            left: 133px;
+            top: -5px;
+            background: #FFFFFF;
+            transform: rotate(-45deg);
+        }  
+    }
     .inner-data-column{
         padding: 0 0 0 6px;
         .heading{
