--- a/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/css/top-search.css
@@ -1217,11 +1217,12 @@ input:focus{
     margin: 11px 0;
 }
 
-.show-all-results-outer-wrap .search-heads.show-all.sdk-show-classification{
+.sdk-top-down-interface .all-product-details .search-heads.show-all.sdk-show-classification{
   text-transform: none;
   font-size: 12px;
   color: #9AA0A6 !important;
-  margin-top: 0px;
+  margin-top: 0px !important;
+  margin-bottom: 12px !important;
 }
 
 .sdk-top-down-interface .faqs-search-data-container{
