--- a/findly-builder/src/app/components/search-experience/search-experience.component.html
+++ b/findly-builder/src/app/components/search-experience/search-experience.component.html
@@ -129,7 +129,7 @@
                                     <div class="box-color-content" *ngIf="inputBox1">
                                         <div class="header-title-close">
                                             <div class="title-name">Choose Color</div>
-                                            <div class="close-color" (click)="toggle=false;inputBox1=false;;">
+                                            <div class="close-color" (click)="toggle=false;inputBox1=false;">
                                                 <img src="assets/icons/close.svg">
                                             </div>
                                         </div>
@@ -138,7 +138,7 @@
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('inputbox1', col);color=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color)">Save Color</div>
+                                        <div class="save-switch" (click)="saveColor(color)">Save Color</div>
                                      </div>
                                 </div>
                             </div>
@@ -170,7 +170,7 @@
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('inputBox2', col);color1=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color1)">Save Color</div>
+                                        <div class="save-switch" (click)="saveColor(color1)">Save Color</div>
                                      </div>
                                 </div>
                             </div>
@@ -210,7 +210,7 @@
                                                 <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('placeholder', col);color2=col;"></div>
                                             </ng-container>                                           
                                         </div>
-                                        <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color2)">Save Color</div>
+                                        <div class="save-switch" (click)="saveColor(color2)">Save Color</div>
                                      </div>
                                 </div>
                             </div>
@@ -268,7 +268,7 @@
                                                     <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonTextColor', col);color3=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color3)">Save Color</div>
+                                            <div class="save-switch" (click)="saveColor(color3)">Save Color</div>
                                          </div>
                                     </div>
                                 </div>
@@ -299,7 +299,7 @@
                                                     <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonFill', col);color4=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color4)">Save Color</div>
+                                            <div class="save-switch" (click)="saveColor(color4)">Save Color</div>
                                          </div>
                                     </div>
                                 </div>
@@ -331,7 +331,7 @@
                                                     <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('buttonBorder', col);color5=col;"></div>
                                                 </ng-container>                                           
                                             </div>
-                                            <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color5)">Save Color</div>
+                                            <div class="save-switch" (click)="saveColor(color5)">Save Color</div>
                                          </div>
                                     </div>
                                 </div>
@@ -404,7 +404,7 @@
                                                         <div class="bg-color-selected" [ngStyle]="{'background':col}" (click)="onEventLog('msgColor', col);color6=col;"></div>
                                                     </ng-container>                                           
                                                 </div>
-                                                <div class="save-switch" (click)="searchObject.searchWidgetConfig.userSelectedColors.push(color6)">Save Color</div>
+                                                <div class="save-switch" (click)="saveColor(color6)">Save Color</div>
                                             </div>
                                         </div>
                                     </div>
