--- a/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
+++ b/findly-builder/src/app/helpers/components/useronboarding-journey/useronboarding-journey.component.scss
@@ -37,6 +37,7 @@
                 line-height: 20px;
                 float: right;
                 cursor: pointer;
+                margin-top: 30px;
             }
         }
         .accodion-content{
