--- a/findly-builder/src/app/components/search-interface/search-interface.component.scss
+++ b/findly-builder/src/app/components/search-interface/search-interface.component.scss
@@ -59,6 +59,10 @@
                             display: block;                      
                         }                       
                     }
+                    &.disabled{
+                        cursor: default;
+                        opacity: 0.5;
+                    }
                 }
             }           
         }
