--- a/findly-builder/src/app/components/traits/traits.component.scss
+++ b/findly-builder/src/app/components/traits/traits.component.scss
@@ -128,6 +128,12 @@
                     top: 12px;
                     cursor: pointer;
                 }
+                .check-icon{
+                    position: absolute;
+                    right: 42px;
+                    top: 12px;
+                    cursor: pointer;
+                }
             } 
             .seach-block{
                 color: #202124;
@@ -403,6 +409,12 @@
                     top: 18px;
                     cursor: pointer;
                 }
+                .check-icon{
+                    position: absolute;
+                    right: 42px;
+                    top: 17px;
+                    cursor: pointer;
+                }
             }
         }
     }
@@ -440,7 +452,13 @@
             .close-icon{
                 position: absolute;
                 right: 11px;
-                top: 12px;
+                top: 17px;
+                cursor: pointer;
+            }
+            .check-icon{
+                position: absolute;
+                right: 42px;
+                top: 17px;
                 cursor: pointer;
             }
         }  
@@ -479,6 +497,12 @@
                     position: absolute;
                     right: 11px;
                     top: 18px;
+                    cursor: pointer;
+                }
+                .check-icon{
+                    position: absolute;
+                    right: 42px;
+                    top: 17px;
                     cursor: pointer;
                 }
             }
